[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/menu_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/header.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/roboto_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/main_menu.gd" type="Script" id=4]
[ext_resource path="res://levels/pillow.png" type="Texture" id=5]
[ext_resource path="res://levels/cat.png" type="Texture" id=6]
[ext_resource path="res://audio/kenney_interfacesounds/Audio/confirmation_001.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/kenney_interfacesounds/Audio/confirmation_004.ogg" type="AudioStream" id=8]
[ext_resource path="res://chair/chair.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 21
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.258824, 0.282353, 1 )

[node name="HeaderOne" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -965.0
margin_top = 363.0
margin_right = 237.0
margin_bottom = 514.0
rect_rotation = -21.0733
custom_fonts/font = ExtResource( 2 )
text = "Unstable"
align = 1
valign = 1

[node name="HeaderTwo" type="Label" parent="HeaderOne"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -203.696
margin_top = -78.6356
margin_right = 998.304
margin_bottom = 72.3644
rect_rotation = 10.9786
custom_fonts/font = ExtResource( 2 )
text = "Chair"
align = 1
valign = 1

[node name="HeaderThree" type="Label" parent="HeaderOne/HeaderTwo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.965
margin_top = -94.8889
margin_right = 899.035
margin_bottom = 56.1111
rect_rotation = 11.0
custom_fonts/font = ExtResource( 2 )
text = "Game"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -35.0
margin_right = 14.0
margin_bottom = 343.0
custom_constants/separation = 128
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
margin_top = 1.0
margin_right = 323.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 1 )
text = "PLAY"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 253.0
margin_right = 323.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 1 )
text = "QUIT"

[node name="Chair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 87.0
margin_top = 184.0
margin_right = 2135.0
margin_bottom = 2232.0
rect_scale = Vector2( 0.271608, 0.271608 )
mouse_filter = 2
texture = ExtResource( 9 )
flip_h = true

[node name="Pillow" type="TextureRect" parent="Chair"]
margin_left = -84.6807
margin_top = -11.0453
margin_right = 1963.32
margin_bottom = 2036.95
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Cat" type="TextureRect" parent="Chair/Pillow"]
margin_right = 2048.0
margin_bottom = 2048.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="PlayAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="QuitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
margin_left = 910.0
margin_top = 650.0
margin_right = 1106.0
margin_bottom = 705.0
custom_fonts/font = SubResource( 1 )
text = "developed by ignurof
audio from kenney.nl"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
